# spipe

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
src/: lib.rs  pipe.rs  utils.rs
